--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root{
+    --dark-bg-color : #060606;
+    --light-bg-color : #ffffff;
+    
+    --red-text-color : #bc0428;
+    --unselected-text-color : #bcbcbc;
+    --light-text-color : #ffffff;
+
+    --news-tag-bg-color : #fff941;
+
+    --button-blue-background-color : #4154fe;
+}
