--- a/src/style/partials/_mixins.scss
+++ b/src/style/partials/_mixins.scss
@@ -1,4 +1,25 @@
 @mixin container{
-    max-width: 1200px;
+    max-width: 1300px;
+    margin: 0 auto;
 }
 
+@mixin d-flex-space-between{
+    display: flex;
+    justify-content: space-between;
+}
+
+@mixin list{
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+@mixin blue-button{
+    background-color: var(--button-blue-background-color);
+    color: var(--light-text-color);
+}
+
+@mixin big-button{
+    padding: 13px 25px;
+    border-radius: 30px;
+}
