Importato Font personalizzato, Aggiunto playButton nel jumbotron

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -8,11 +8,13 @@
     --dark-bg-color : #060606;
     --light-bg-color : #ffffff;
     
-    --red-text-color : #bc0428;
+    --red-text-color : #ff412f;
     --unselected-text-color : #bcbcbc;
     --light-text-color : #ffffff;
 
     --news-tag-bg-color : #fff941;
+    --underline-color:#fff941;
 
     --button-blue-background-color : #4154fe;
+    --border-transparent-button:#2c2a35;
 }
