--- a/src/style/partials/_mixins.scss
+++ b/src/style/partials/_mixins.scss
@@ -3,6 +3,12 @@
     margin: 0 auto;
 }
 
+@mixin d-flex-center-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @mixin d-flex-space-between{
     display: flex;
     justify-content: space-between;
@@ -20,6 +26,6 @@
 }
 
 @mixin big-button{
-    padding: 13px 25px;
+    padding: 15px 35px;
     border-radius: 30px;
 }
