Card quesi concluse, section background da ricontrollare

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -17,4 +17,8 @@
 
     --button-blue-background-color : #4154fe;
     --border-transparent-button:#2c2a35;
+
+
+    --section-light-color: #a00644;
+    --section-dark-color: #0719e7;
 }
