Sistemato section bg e card shodow

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -19,6 +19,7 @@
     --border-transparent-button:#2c2a35;
 
 
-    --section-light-color: #a00644;
-    --section-dark-color: #0719e7;
+    --section-light-color: #d00010;
+    --section-dark-color: #0319ea;
+    --section-mid-color: #7a0a6c;
 }
