section video quasi terminata

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -11,12 +11,14 @@
     --red-text-color : #ff412f;
     --unselected-text-color : #bcbcbc;
     --light-text-color : #ffffff;
+    --blue-text-color:#4154ff;
 
     --news-tag-bg-color : #fff941;
     --underline-color:#fff941;
 
     --button-blue-background-color : #4154fe;
     --border-transparent-button:#2c2a35;
+    --red-button-background: #ff0000;   
 
 
     --section-light-color: #d00010;
