--- a/src/style/partials/_mixins.scss
+++ b/src/style/partials/_mixins.scss
@@ -29,3 +29,9 @@
     padding: 15px 35px;
     border-radius: 30px;
 }
+
+@mixin rounded-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px 5px 50px;
+}
