aggiunta description in card section

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -16,6 +16,8 @@
     --news-tag-bg-color : #fff941;
     --underline-color:#fff941;
 
+    --card-border:#3240c1;
+
     --button-blue-background-color : #4154fe;
     --border-transparent-button:#2c2a35;
     --red-button-background: #ff0000;   
